ajuste search help

--- a/declimobtransp_004/webapp/manifest.json
+++ b/declimobtransp_004/webapp/manifest.json
@@ -97,6 +97,9 @@
             "account": {
                 "type": "sap.ui.model.json.JSONModel"
             },
+            "supplier": {
+                "type": "sap.ui.model.json.JSONModel"
+            },
             "": {
                 "dataSource": "mainService",
                 "preload": true,
