ajuste colunas e visibilidade de coluna/filtros

--- a/customertitles_004/webapp/manifest.json
+++ b/customertitles_004/webapp/manifest.json
@@ -106,6 +106,9 @@
             "account": {
                 "type": "sap.ui.model.json.JSONModel"
             },
+            "personalizationTable": {
+                "type": "sap.ui.model.json.JSONModel"
+            },
             "": {
                 "dataSource": "TITCLI_CDS",
                 "preload": true,
