ajuste chamada de compensação pelo banco

--- a/customertitles_004/webapp/manifest.json
+++ b/customertitles_004/webapp/manifest.json
@@ -109,6 +109,9 @@
             "personalizationTable": {
                 "type": "sap.ui.model.json.JSONModel"
             },
+            "corporateBank": {
+                "type": "sap.ui.model.json.JSONModel"
+            },
             "": {
                 "dataSource": "TITCLI_CDS",
                 "preload": true,
